tests/error/0043.exl
"\u{111111111111111}"
    ^ERROR